# ubb_cs

./: .gitignore  README.md
Semester_1/Arhitectura_sistemelor_de_calcul/: clasa.asm
Semester_1/Arhitectura_sistemelor_de_calcul/lab_1/: 1.asm
Semester_1/Arhitectura_sistemelor_de_calcul/lab_10/: 27 ult.asm
Semester_1/Fundamentele_Programarii/Labs/Lab 1/: 1.py  11.py  14.py  16.py  3.py  4.py  5.py  7.py  8.py  9.py
Semester_1/Fundamentele_Programarii/Labs/Lab 2/: lab 2.docx  lab hw.py
Semester_1/Fundamentele_Programarii/Labs/Lab 3/: Lab 03 HW ION ANDREEA MARINA.py  Lab 03 Ion Andreea Cazuri test o functie , scenarii de rulare.docx
Semester_1/Fundamentele_Programarii/Labs/Lab 4-6/: documentatie cheltuieli familie.docx  fast input.txt
Semester_1/Fundamentele_Programarii/Labs/Lab_12/: movies.txt  read_me.md  rentals.txt
Semester_1/Fundamentele_Programarii/Labs/Lab_13-14/: 13_iterativ.py
Semester_1/Programare_in_C/Assignment_1/: 2.c  4.c  leetcode_two_sum.c
Semester_1/Programare_in_C/Assignment_2/: 3.c  3_f.c  read_me
Semester_1/Programare_in_C/Assignment_3-4/Category_1/: 1.c
Semester_1/Programare_in_C/Assignment_3-4/Category_2/: 1.c
Semester_1/Programare_in_C/Assignment_3-4/Leet_Code/: 206_rev_link_list_I.c  links_to_them.md
Year_1/Semester_1/Arhitectura_sistemelor_de_calcul/lab_1/: Arhitectura Sistemelor de Calcul lec 1.docx  Laborator 1.docx  clasa.asm
Year_1/Semester_1/Arhitectura_sistemelor_de_calcul/lab_4/: 13.asm  27.asm  27s.asm
Year_1/Semester_1/Arhitectura_sistemelor_de_calcul/lab_7/: 27.asm  27.lst  28.asm  28.lst
Year_1/Semester_1/Arhitectura_sistemelor_de_calcul/practical_exam/: numere.txt  vineri 12-14.asm  vineri 12-14.lst
Year_1/Semester_1/Programare_in_C/Assignment_2/: 3_f.c
Year_1/Semester_2/Data Structures and Algorithms/lab_1/: CMakeLists.txt  problema.txt
Year_1/Semester_2/Data Structures and Algorithms/lab_3/: main.cpp
Year_1/Semester_2/Data Structures and Algorithms/lab_3c/: CMakeLists.txt  main.cpp
Year_1/Semester_2/Data Structures and Algorithms/lab_4/: CMakeLists.txt  main.cpp
Year_1/Semester_2/Data Structures and Algorithms/lab_7/: IteratorMDO.cpp  MDO.h  read_me.md
Year_1/Semester_2/Data Structures and Algorithms/labs/: read_me.md
Year_1/Semester_2/Dynamical Systems/: read_me.md
Year_1/Semester_2/Dynamical Systems/lab_1/: lab.mw  lab_1.mw  lab_1_cont.mw
Year_1/Semester_2/Dynamical Systems/lab_3/: lab_3.mw
Year_1/Semester_2/Dynamical Systems/lab_4/: 1.mw  2.mw  3.mw  4.mw
Year_1/Semester_2/Dynamical Systems/lab_6/: 1.mw  2.mw  3.mw
Year_1/Semester_2/Graph Algorithms/lab_2/: graf.txt  (+1 more)
Year_1/Semester_2/OOP/: configuring_Valgrind_on_CLION_justClionconfig.docx
Year_1/Semester_2/OOP/lab_06/: CMakeLists.txt
Year_1/Semester_2/OOP/lab_06/domain/: Subject.cpp
Year_1/Semester_2/OOP/lab_06/service/: SubjectsService.h
Year_1/Semester_2/OOP/lab_06/ui/: SubjectsUi.cpp
Year_1/Semester_2/OOP/lab_09/: CMakeLists.txt  Iteratia 8  main.cpp  trying.html
Year_1/Semester_2/OOP/lab_09/Undo/: Undo.cpp
Year_1/Semester_2/OOP/lab_09/repository/: SubjectsRepo.h
Year_1/Semester_2/OOP/lab_09/service/: SubjectsService.h
Year_1/Semester_2/OOP/lab_09/tests/: Tests.cpp  Tests.h
Year_1/Semester_2/OOP/lab_13/l10_/: APPGUI.cpp  APPGUI.h  CMakeLists.txt  Observer.cpp  Observer.h
Year_1/Semester_2/OOP/lab_13/l10_/ContractRepository/: ContractRepo.cpp
Year_1/Semester_2/OOP/lab_13/l10_/tests/: Tests.cpp
Year_1/Semester_2/OOP/lab_2_4/: CMakeLists.txt  magazin_de_electronice.c
Year_1/Semester_2/OOP/lab_2_4/model/: electronic.c  electronic.h
Year_1/Semester_2/OOP/lab_2_4/my_list/: MyList.c  MyList.h
Year_1/Semester_2/OOP/lab_2_4/repository/: repository.c  repository.h
Year_1/Semester_2/OOP/lab_2_4/service/: service.c  service.h
Year_1/Semester_2/OOP/lab_2_4/tests/: test.c  test.h
Year_1/Semester_2/OOP/lab_2_4/ui/: ui.c  ui.h
Year_1/Semester_2/OOP/lab_2_4/validation/: validate.c
Year_1/Semester_2/OOP/lab_6-7/: CMakeLists.txt  main.cpp
Year_1/Semester_2/OOP/lab_6-7/Exceptions/: Exceptions.cpp  Exceptions.h
Year_1/Semester_2/OOP/lab_6-7/domain/: Subject.cpp  Subject.h
Year_1/Semester_2/OOP/lab_6-7/repository/: SubjectsRepo.cpp  SubjectsRepo.h
Year_1/Semester_2/OOP/lab_6-7/service/: SubjectsService.cpp  SubjectsService.h
Year_1/Semester_2/OOP/lab_6-7/ui/: SubjectsUi.cpp  SubjectsUi.h
Year_1/Semester_2/OOP/lab_6-7/validator/: ValidatorSubject.cpp  ValidatorSubject.h
Year_1/Semester_2/OOP/lab_8/: CMakeLists.txt  main.cpp  trying.html
Year_1/Semester_2/OOP/lab_8/ContractRepository/: ContractRepo.cpp
Year_1/Semester_2/OOP/lab_8/domain/: Subject.h
Year_1/Semester_2/OOP/lab_8/repository/: SubjectsRepo.cpp  SubjectsRepo.h
Year_1/Semester_2/OOP/lab_8/service/: SubjectsService.cpp
Year_1/Semester_2/OOP/lab_8/tests/: Tests.h
Year_2/Semester_1/Metode_Avansate_De_Programare/: read_me.md
Year_2/Semester_2/Inteligenta_Artificiala/: README.md
Year_2/Semester_2/Programare_Web/: README.MD
Year_3/Semester_1/Mobile/: README.md
(+1157 files in other folders)
